--- a/.releaserc
+++ b/.releaserc
@@ -2,6 +2,7 @@
   "branches": [
     "+([0-9])?(.{+([0-9]),x}).x",
     "master",
+    "main",
     {
       "name": "develop",
       "prerelease": true
